luxtensor/rpc_errors.txt
cargo :    Compiling luxtensor-crypto v0.4.0 (D:
\venera\cardano\moderntensor\moderntensor\luxten
sor\crates\luxtensor-crypto)
At line:1 char:1
+ cargo build -p luxtensor-rpc 2>&1 | Out-File 
-FilePath rpc_errors.txt ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
    Compiling lu...xtensor-crypto):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
   Compiling luxtensor-core v0.4.0 (D:\venera\ca
rdano\moderntensor\moderntensor\luxtensor\crates
\luxtensor-core)
   Compiling luxtensor-contracts v0.4.0 (D:\vene
ra\cardano\moderntensor\moderntensor\luxtensor\c
rates\luxtensor-contracts)
   Compiling luxtensor-storage v0.4.0 (D:\venera
\cardano\moderntensor\moderntensor\luxtensor\cra
tes\luxtensor-storage)
   Compiling luxtensor-consensus v0.4.0 (D:\vene
ra\cardano\moderntensor\moderntensor\luxtensor\c
rates\luxtensor-consensus)
warning: unused import: `Write`
  --> crates\luxtensor-storage\src\maintenance.r
s:10:27
   |
10 | use std::io::{self, Read, Write};
   |                           ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: 
`std::collections::HashMap`
 --> crates\luxtensor-consensus\src\long_range_p
rotection.rs:6:5
  |
6 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `Read`
  --> crates\luxtensor-storage\src\maintenance.r
s:10:21
   |
10 | use std::io::{self, Read, Write};
   |                     ^^^^

warning: field `pending_ops` is never read
   --> crates\luxtensor-contracts\src\account_ab
straction.rs:178:5
    |
170 | pub struct EntryPoint {
    |            ---------- field in this struct
...
178 |     pending_ops: Arc<RwLock<HashMap<Hash, 
UserOperation>>>,
    |     ^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `current_block`
   --> crates\luxtensor-consensus\src\weight_con
sensus.rs:377:9
    |
377 |         current_block: u64,
    |         ^^^^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_current_block`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

warning: field `dao_address` is never read
  --> crates\luxtensor-consensus\src\reward_exec
utor.rs:70:5
   |
49 | pub struct RewardExecutor {
   |            -------------- field in this 
struct
...
70 |     dao_address: [u8; 20],
   |     ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

   Compiling luxtensor-rpc v0.4.0 (D:\venera\car
dano\moderntensor\moderntensor\luxtensor\crates\
luxtensor-rpc)
error[E0432]: unresolved import `sha2`
  --> 
crates\luxtensor-rpc\src\admin_auth.rs:12:5
   |
12 | use sha2::{Sha256, Digest};
   |     ^^^^ use of unresolved module or 
unlinked crate `sha2`
   |
help: there is a crate or module with a similar 
name
   |
12 - use sha2::{Sha256, Digest};
12 + use sha3::{Sha256, Digest};
   |

warning: unused imports: `Deserialize` and 
`Serialize`
 --> crates\luxtensor-rpc\src\error.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `generate_tx_hash`
   --> crates\luxtensor-rpc\src\server.rs:295:50
    |
295 |             use 
crate::eth_rpc::{hex_to_address, 
generate_tx_hash};
    |                                           
       ^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> 
crates\luxtensor-rpc\src\admin_auth.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unexpected `cfg` condition value: 
`reqwest`
  --> 
crates\luxtensor-rpc\src\load_balancer.rs:95:11
   |
95 |     #[cfg(feature = "reqwest")]
   |           ^^^^^^^^^^^^^^^^^^^ help: remove 
the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightl
y/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration
   = note: `#[warn(unexpected_cfgs)]` on by 
default

warning: unexpected `cfg` condition value: 
`reqwest`
   --> 
crates\luxtensor-rpc\src\load_balancer.rs:111:19
    |
111 |             #[cfg(feature = "reqwest")]
    |                   ^^^^^^^^^^^^^^^^^^^ 
help: remove the condition
    |
    = note: no expected values for `feature`
    = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/night
ly/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration

warning: `luxtensor-storage` (lib) generated 2 
warnings (run `cargo fix --lib -p 
luxtensor-storage` to apply 1 suggestion)
warning: `luxtensor-consensus` (lib) generated 
3 warnings (run `cargo fix --lib -p 
luxtensor-consensus` to apply 2 suggestions)
warning: `luxtensor-contracts` (lib) generated 
1 warning
warning: unused variable: `validators_config`
   --> crates\luxtensor-rpc\src\handlers\staking
.rs:313:9
    |
313 |     let validators_config = 
validators.clone();
    |         ^^^^^^^^^^^^^^^^^ help: if this 
is intentional, prefix it with an underscore: 
`_validators_config`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0432`.
warning: `luxtensor-rpc` (lib) generated 6 
warnings
error: could not compile `luxtensor-rpc` (lib) 
due to 1 previous error; 6 warnings emitted
